@@ -2,6 +2,7 @@ NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
 V1.1.0
+- NEW : Define number of columns inside the gallery
 - Bugfix : Clean up mode for singlepic
 
 V1.0.2 - 19.12.2008
